# SAM-2.1_fine_tuning

./: README.md  pyproject.toml  train.yaml
notebooks/: model.ipynb
