[tool.poetry]
name = "sam-2-1-fine-tuning"
version = "0.1.0"
description = ""
authors = ["Mkoek213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"
packages = [{include = "sam_2"}]

[tool.poetry.dependencies]
python = "^3.10"
roboflow = "^1.1.50"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
